# rbpf

./: .appveyor.yml  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  clippy.toml
.github/workflows/: test.yaml
examples/: allowed_memory.rs  block_a_port.c  date.rs  disassemble.rs  ebpf-allowed-memory.rs  load_elf.rs  load_elf__block_a_port.c  meta.rs  rbpf_plugin.rs  to_json.rs  uptime.rs
examples/allowed-memory/: Cargo.toml  README.md
examples/allowed-memory/.cargo/: config.toml
examples/allowed_memory/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: programgenerator.rs  simple.rs  simple_prog.rs
fuzzer/: Cargo.toml
fuzzer/src/: main.rs
instructions/: Cargo.toml
instructions/src/: lib.rs
mk/: appveyor.bat
src/: asm_parser.rs  assembler.rs  code_build.rs  cranelift.rs  disassembler.rs  ebpf.rs  elf.rs  helpers.rs  insn_builder.rs  interpreter.rs  jit.rs  jit_aarch64.rs  jit_riscv64.rs  jit_x86_64.rs  lib.rs  maps.rs  no_std_error.rs  patch.rs  rust_api.rs  stack.rs  verifier.rs  with_alloc.rs  with_std.rs  without_std.rs
tests/: asm_parser.rs  assembler.rs  common.rs  conformance.rs  cranelift.rs  disassembler.rs  jit_sizing.rs  maps.rs  misc.rs  noop.c  noop.sh  ubpf_jit_x86_64.rs  ubpf_verifier.rs  ubpf_vm.rs  xadd.rs
tests/elfs/: elfs.sh  entrypoint.c  helper.c  helper.h  unresolved_helper.c
