[package]
name = "rbpf-fuzz"
version = "0.0.0"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.0", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.rbpf]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "simple"
path = "fuzz_targets/simple.rs"
test = false
doc = false
