[package]
name = "allowed-memory"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"

[dependencies]
aya-ebpf = "0.1.0"

[[bin]]
name = "allowed-memory"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

